// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders with different props 1`] = `
<div>
  <button
    class="button button--large button--secondary"
    data-testid="jrc-button"
  >
    Test Button
  </button>
</div>
`;

exports[`Button renders without error 1`] = `
<div>
  <button
    class="button button--medium button--primary"
    data-testid="jrc-button"
  >
    Test Button
  </button>
</div>
`;
